# ai-nft-generator

./: .gitignore  .pnp.cjs  Anchor.toml  Cargo.toml  package.json
programs/ai-nft-generator/: Cargo.toml  build.rs
programs/ai-nft-generator/src/: error.rs  lib.rs  model.rs
programs/ai-nft-generator/src/actions/: generate_nft.rs  initialize.rs  mod.rs  set_function.rs  trigger_function.rs  user_prompt.rs
sgx-function/: .gitignore  Cargo.toml  Dockerfile  Makefile  build.rs  measurement.txt  package.json
sgx-function/src/: generate_image.rs  generate_metadata.rs  main.rs
switchboard-programs-devnet/: attestation-idl.json  attestation-state.json  devnet-idl.json  sbState.json  solana-test-validator.sh  tokenVaulr.json  tokenVault.json
tests/: ai-nft-generator.ts  generate_matadata.ts
