[package]
name = "openai-request"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-openai = "0.14.0"
# reqwest = "0.11.18"
anchor-lang = "0.28.0"
switchboard-solana = "0.28.8"
futures = "0.3.28"
tokio = { version = "1.14.1", features = ["full"] }
ai-nft-generator = { path = "../programs/ai-nft-generator", features = [
    "no-entrypoint",
] }
switchboard-utils = "0.8.0"
serde = "1.0.183"
serde_json = "1.0.104"
# openssl = "0.10.56"
